--- a/src/App.css
+++ b/src/App.css
@@ -9,3 +9,13 @@
     background-size: cover;
     background-position: center;
 }
+
+.start {
+    opacity: 0;
+}
+
+.end {
+    opacity: 1;
+
+    transition: opacity 0.5s;
+}
